# MultiModal-E-Commerce-Customer-Support-Chatbot

./: .gitignore  README.md  chainlit_ui.py  config.ini  data_cleaning.ipynb  data_cleaning.ipynb~  img_embeddings.ipynb  main.py  products_url.pkl  prompt.txt  pyproject.toml  pyproject.toml~
backend/: chainlit_ui.py  chatbot.py  model.py  voice_mode.py
backend/assistants/: image.py  model.py  voice.py
image_index/: products_url.pkl
